# cv-anomaly-detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
cv_anomaly_detection/: img_dataframe.py
cv_anomaly_detection/data_cleaning/: __init__.py
cv_anomaly_detection/metrics/: img_metrics.py
cv_anomaly_detection/models/: config.py  tiny_vit.py
cv_anomaly_detection/utils/: __init__.py  plots.py
notebooks/: 02-Features.ipynb
scripts/: dataframe_generation.py  evaluate_mobinelet_v3.py  evaluate_tiny_vit.py
tests/data_cleaning/: test_data_cleaning.py
tests/metrics/: test_img_metrics.py
tests/utils/: test_utils.py
