[tool.poetry]
name = "cv-anomaly-detection"
version = "0.1.0"
description = ""
authors = ["Marcelo Ide Pimentel <marcelo.ide.pimentel@gmail.com>"]
readme = "README.md"
packages = [{include = "cv_anomaly_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.0.74"
scikit-learn = "^1.3.0"
notebook = "^7.0.2"
seaborn = "^0.13.0"
numpy = "^1.25.2"
imagehash = "^4.3.1"
scikit-image = "^0.22.0"
keras = "^3.0.2"
torch = "^2.2.0"
torchvision = "^0.17.0"
pydot = "^2.0.0"
pydot-ng = "^2.0.0"
timm = "^0.9.16"
yacs = "^0.1.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
